# etl_project

./: .gitignore  log4j.properties  main.py  pyproject.toml  requirements.md  spark.conf
config/: api_configs
dags/: ingest_dag.py
resources/news_api/: ingest.yml
