[project]
name = "etl-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Aliaksei Yafimau",email = "aaefimov1998@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyspark (>=3.5.3)",
    "datetime (>=5.5)",
    "pytest (>=8.3.4)",
    "requests (>=)",
    "setuptools(>=75.8.0)",
    "numpy(>=2.2.2)",
    "pandas(>=2.2.3)",
    "python-dateutil(>=2.9.0.post0)",
    "pytz(>=2024.2)",
    "six(>=1.17.0)",
    "tzdata(>=2025.1)",
    "pyarrow(>=19.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
